Fix victory pie not showing correct amounts

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -10,16 +10,9 @@ button {
 .swal2-title {
   font-size: 1.25em !important;
 }
-// .swal2-icon img {
-//   width: 3em !important;
-//   height: 3em !important;
-// }
-// .swal2-image {
-//   font-size: x-small !important;
-// }
 
 .application {  
-  
+  background-color: #f9f9f6;
   height: 100vh;
   display: grid;
   // grid-template-columns: 150px 1fr;
