--- a/src/components/Common/Card/Card.scss
+++ b/src/components/Common/Card/Card.scss
@@ -11,8 +11,8 @@
     // border-bottom: 1px solid #dee0e2;
     //width: 70%;
     // border: 1px solid #bacdd8;
-    // border-radius: 12px;
-    // box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
+     border-radius: 5px;
+     //box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
 }
 
 // .card:last-child{
